[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/hp_bar.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://ui/hp_bar.png" type="Texture" id=3]

[node name="hp_bar" type="Node2D"]
script = ExtResource( 1 )

[node name="delayed_progress" type="TextureProgress" parent="."]
margin_right = 64.0
margin_bottom = 64.0
rect_scale = Vector2( 1, 0.2 )
value = 50.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 3 )
tint_under = Color( 0, 0, 0, 1 )
tint_progress = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hp_progress" type="TextureProgress" parent="."]
margin_right = 64.0
margin_bottom = 64.0
rect_scale = Vector2( 1, 0.2 )
value = 45.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 3 )
tint_under = Color( 0, 0, 0, 0 )
tint_progress = Color( 0.0588235, 0.396078, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="delay_tween" type="Tween" parent="."]
